--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next-auth": "^4.24.13",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-swipeable": "^7.0.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
